feat: implement turbine CRUD module
